<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame">

    <LinearLayout
        android:id="@+id/myst_group_colour_radio_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/myst_radio_button_group_colour_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/myst_radio_button_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/myst_radio_button_control_margin"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_r"/>

        <RadioButton
            android:id="@+id/myst_radio_button_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_g" />

        <RadioButton
            android:id="@+id/myst_radio_button_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/myst_radio_button_control_margin"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_b" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myst_group_reading_type_radio_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/myst_group_colour_radio_buttons"
        android:layout_marginLeft="@dimen/myst_radio_button_group_type_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/myst_radio_button_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/myst_radio_button_control_margin"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_t" />

        <RadioButton
            android:id="@+id/myst_radio_button_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_a" />

    </LinearLayout>

    <TextView
        android:id="@+id/myst_button_calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/myst_group_instant_capture"
        android:paddingLeft="@dimen/myst_view_calibrate_padding"
        android:paddingTop="@dimen/myst_view_calibrate_padding"
        android:textColor="@color/myst_text_green"
        android:text="@string/myst_button_calibrate"/>

    <TextView
        android:id="@+id/myst_text_view_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/myst_group_instant_capture"
        android:layout_below="@+id/myst_button_calibrate"
        android:textColor="@color/myst_text_black"
        android:text="@string/myst_label_no_reading"/>

    <LinearLayout
        android:id="@+id/myst_group_instant_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/myst_text_view_reading"
        android:layout_marginRight="@dimen/myst_group_capture_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/myst_text_black"
                android:textSize="@dimen/myst_text_view_capture_text_size"
                android:text="@string/myst_label_separate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/myst_text_black"
                android:textSize="@dimen/myst_text_view_capture_text_size"
                android:text="@string/myst_label_event"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/myst_button_single_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/myst_button_capture_padding"
            android:src="@drawable/myst_button_capture_disabled"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/myst_image_view_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/myst_group_instant_capture"
        android:src="@drawable/myst_button_rec_disabled"/>

    <EditText
        android:id="@+id/myst_edit_text_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/myst_edit_text_note_height"
        android:layout_below="@+id/myst_group_instant_capture"
        android:layout_toLeftOf="@+id/myst_image_view_start_stop"
        android:layout_marginLeft="@dimen/myst_edit_text_note_margin"
        android:hint="@string/myst_hint_note"/>

    <LinearLayout
        android:id="@+id/myst_group_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myst_edit_text_note"
        android:layout_toLeftOf="@+id/myst_image_view_start_stop"
        android:layout_marginLeft="@dimen/myst_edit_text_note_margin"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/myst_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/myst_text_view_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/myst_button_control_horizontal_padding"
                android:paddingRight="@dimen/myst_button_control_horizontal_padding"
                android:paddingTop="@dimen/myst_button_control_vertical_padding"
                android:paddingBottom="@dimen/myst_button_control_vertical_padding"
                android:singleLine="true"
                android:textColor="@color/myst_text_green"
                android:text="@string/myst_button_save"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/myst_button_sessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/myst_text_view_sessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/myst_button_control_horizontal_padding"
                android:paddingRight="@dimen/myst_button_control_horizontal_padding"
                android:paddingTop="@dimen/myst_button_control_vertical_padding"
                android:paddingBottom="@dimen/myst_button_control_vertical_padding"
                android:singleLine="true"
                android:textColor="@color/myst_text_green"
                android:text="@string/myst_button_sessions"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/myst_button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/myst_text_view_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/myst_button_control_horizontal_padding"
                android:paddingRight="@dimen/myst_button_control_horizontal_padding"
                android:paddingTop="@dimen/myst_button_control_vertical_padding"
                android:paddingBottom="@dimen/myst_button_control_vertical_padding"
                android:singleLine="true"
                android:textColor="@color/myst_text_green"
                android:text="@string/myst_button_clear"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>