<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <NumberPicker
            android:id="@+id/myst_number_picker_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:descendantFocusability="blocksDescendants"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/myst_label_time_padding"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_h"/>

        <NumberPicker
            android:id="@+id/myst_number_picker_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:descendantFocusability="blocksDescendants"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/myst_label_time_padding"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_m"/>

        <NumberPicker
            android:id="@+id/myst_number_picker_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:descendantFocusability="blocksDescendants"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/myst_label_time_padding"
            android:textColor="@color/myst_text_grey"
            android:text="@string/myst_label_s"/>

    </LinearLayout>
</RelativeLayout>